--- a/index.html
+++ b/index.html
@@ -1,177 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>2-oy_imtihon</title>
-    <link rel="stylesheet" href="css/main.css" />
-  </head>
-  <body>
-    <h1 class="visually-hidden">Mini-malist</h1>
-    <header class="header">
-      <h2 class="visually-hidden">header-section</h2>
-      <div class="header__container container">
-        <a class="header__link" href="#">
-          <img
-            class="header__link-img"
-            src="./img/header-logo-1x.svg"
-            srcset="./img/header-logo-1x.svg 1x, ./img/header-logo-1x.svg 2x"
-            alt="header-img"
-            width="61"
-            height="32"
-          />
-        </a>
-        <nav class="header__nav">
-          <ul class="header__list">
-            <li class="header__item">
-              <a class="header__item-link header__item-link-first-child" href=""
-                >HOME</a
-              >
-            </li>
-            <li class="header__item">
-              <a class="header__item-link" href="">PORTFOLIO</a>
-            </li>
-            <li class="header__item">
-              <a class="header__item-link" href="./contact-me.html"
-                >CONTACT ME</a
-              >
-            </li>
-          </ul>
-        </nav>
-        <img class="header__button" src="./img/header-button.png" alt="" />
-      </div>
-    </header>
-    <main>
-      <section class="container">
-        <div class="website-section">
-          <div class="website-section__texts">
-            <h2 class="website-section__heading">
-              Hey, I’m Alex Spencer and I love building beautiful websites
-            </h2>
-            <div class="website-section__desc">
-              <div class="website-section__img-text">
-                <img
-                  class="website-section__img"
-                  src="./img/about-me-img.png"
-                  width="16"
-                  height="12"
-                  alt="img"
-                />
-              </div>
-              <a class="website-section__link" href="">ABOUT ME</a>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>2-oy_imtihon</title>
+  <link rel="stylesheet" href="css/main.css" />
+</head>
+
+<body>
+  <h1 class="visually-hidden">Mini-malist</h1>
+  <header class="header">
+    <h2 class="visually-hidden">header-section</h2>
+    <div class="header__container container">
+      <a class="header__link" href="#">
+        <img class="header__link-img" src="./img/header-logo-1x.svg"
+          srcset="./img/header-logo-1x.svg 1x, ./img/header-logo-1x.svg 2x" alt="header-img" width="61" height="32" />
+      </a>
+      <nav class="header__nav">
+        <ul class="header__list">
+          <li class="header__item">
+            <a class="header__item-link header__item-link-first-child" href="">HOME</a>
+          </li>
+          <li class="header__item">
+            <a class="header__item-link" href="">PORTFOLIO</a>
+          </li>
+          <li class="header__item">
+            <a class="header__item-link" href="./contact-me.html">CONTACT ME</a>
+          </li>
+        </ul>
+      </nav>
+      <img class="header__button" src="./img/header-button.png" alt="" />
+    </div>
+  </header>
+  <main>
+    <section class="container">
+      <picture class="website-section__picture">
+        <source media="(max-width:768px)" srcset="backgroud-img-tablet1x.jpg 1x,backgroud-img-tablet2x.jpg 2x"
+          width="688" height="600" />
+        <source media="(max-width:375px)" srcset="background-img-mobile1x.jpg 1x,background-img-mobile2x.jpg 2x"
+          width="311" height="271" />
+        <img class="website-section__img" src="./img/background-img-1x.jpg"
+          srcset="./img/background-img-1x.jpg 1x, ./img/background-img-@2x.jpg 2x" width="540" height="600"
+          alt="Flowers" style="width: auto" />
+      </picture>
+      <div class="website-section">
+        <div class="website-section__texts">
+          <h2 class="website-section__heading">
+            Hey, I’m Alex Spencer and I love building beautiful websites
+          </h2>
+          <div class="website-section__desc">
+            <div class="website-section__img-text">
+              <img class="website-section__img" src="./img/about-me-img.png" width="16" height="12" alt="img" />
             </div>
+            <a class="website-section__link" href="">ABOUT ME</a>
           </div>
         </div>
-      </section>
-      <section class="about-us container">
-        <h2 class="visually-hidden">about-us-section</h2>
-        <picture class="about-us__picture">
-          <source
-            media="(max-width:768px)"
-            srcset="
+      </div>
+    </section>
+    <section class="about-us container">
+      <h2 class="visually-hidden">about-us-section</h2>
+      <picture class="about-us__picture">
+        <source media="(max-width:768px)" srcset="
               ./img/about-me-tablet1x.jpg 1x,
               ./img/about-me-tablet2x.jpg 2x
-            "
-          />
-          <source
-            media="(max-width:375px)"
-            srcset="
+            " />
+        <source media="(max-width:375px)" srcset="
               ./img/abot-me-mobile1x.jpg 1x,
               ./img/abot-me-mobile2x.jpg 2x
-            "
-          />
-          <img
-            class="about-us__img"
-            src="./img/about-me-img-1x.jpg"
-            srcset="./img/about-me-img-1x.jpg 1x, ./img/about-me-img-2x.jpg 2x"
-            width="540"
-            height="600"
-            alt="Flowers"
-            style="width: auto"
-          />
-        </picture>
-        <section class="about-us__section">
-          <h2 class="about-us__section-heading">About Me</h2>
-          <p class="about-us__section-desc">
-            I’m a junior front-end developer looking for a new role in an
-            exciting company. I focus on writing accessible HTML, using modern
-            CSS practices and writing clean JavaScript. When writing JavaScript
-            code, I mostly use React, but I can adapt to whatever tools are
-            required. I’m based in London, UK, but I’m happy working remotely
-            and have experience in remote teams. When I’m not coding, you’ll
-            find me outdoors. I love being out in nature whether that’s going
-            for a walk, run or cycling. I’d love you to check out my work.
-          </p>
-          <a href="" class="about-us__section-link primary--link"
-            >GO TO PORTFOLIO</a
-          >
-        </section>
+            " />
+        <img class="about-us__img" src="./img/about-me-img-1x.jpg"
+          srcset="./img/about-me-img-1x.jpg 1x, ./img/about-me-img-2x.jpg 2x" width="540" height="600" alt="Flowers"
+          style="width: auto" />
+      </picture>
+      <section class="about-us__section">
+        <h2 class="about-us__section-heading">About Me</h2>
+        <p class="about-us__section-desc">
+          I’m a junior front-end developer looking for a new role in an
+          exciting company. I focus on writing accessible HTML, using modern
+          CSS practices and writing clean JavaScript. When writing JavaScript
+          code, I mostly use React, but I can adapt to whatever tools are
+          required. I’m based in London, UK, but I’m happy working remotely
+          and have experience in remote teams. When I’m not coding, you’ll
+          find me outdoors. I love being out in nature whether that’s going
+          for a walk, run or cycling. I’d love you to check out my work.
+        </p>
+        <a class="about-us__section-link primary--link" href="./index.html">GO TO PORTFOLIO</a>
       </section>
-      <section class="contact-me container">
-        <h2 class="contact-me__heading">
-          Interested in doing a project together?
-        </h2>
-        <a class="primary--link contact-me__link" href="">CONTACT ME</a>
-      </section>
-    </main>
-    <footer class="footer">
-      <h2 class="visually-hidden">footer-section</h2>
-      <div class="footer__container container">
-        <a class="header__link" href="#">
-          <img
-            class="header__link-img"
-            src="./img/footer-logo1x.svg"
-            srcset="./img/footer-logo1x.svg 1x, ./img/footer-logo2x.svg 2x"
-            alt="header-img"
-            width="61"
-            height="32"
-          />
-        </a>
-        <nav class="header__nav footer__nav">
-          <ul class="header__list footer__list">
-            <li class="header__item footer__item">
-              <a
-                class="header__item-link header__item-link-first-child footer__link"
-                href=""
-                >HOME</a
-              >
-            </li>
-            <li class="header__item footer__item">
-              <a class="header__item-link footer__link" href="">PORTFOLIO</a>
-            </li>
-            <li class="header__item footer__item">
-              <a class="header__item-link footer__link" href="">CONTACT ME</a>
-            </li>
-          </ul>
-        </nav>
-        <div class="footer__button">
-          <a href="" class="footer__link">
-            <img
-              class="footer__link-img"
-              src="./img/git-hub.png"
-              alt=""
-              width="25"
-              height="24"
-          /></a>
-          <a href="" class="footer__link">
-            <img
-              class="footer__link-img"
-              src="./img/twitter.png"
-              alt=""
-              width="24"
-              height="20"
-          /></a>
-          <a href="" class="footer__link">
-            <img
-              class="footer__link-img"
-              src="./img/linkedin.png"
-              alt=""
-              width="24"
-              height="24"
-          /></a>
-        </div>
+    </section>
+    <section class="contact-me container">
+      <h2 class="contact-me__heading">
+        Interested in doing a project together?
+      </h2>
+      <a class="primary--link contact-me__link" href="./contact-me.html">CONTACT ME</a>
+    </section>
+  </main>
+  <footer class="footer">
+    <h2 class="visually-hidden">footer-section</h2>
+    <div class="footer__container container">
+      <a class="header__link" href="#">
+        <img class="header__link-img" src="./img/footer-logo1x.svg"
+          srcset="./img/footer-logo1x.svg 1x, ./img/footer-logo2x.svg 2x" alt="header-img" width="61" height="32" />
+      </a>
+      <nav class="header__nav footer__nav">
+        <ul class="header__list footer__list">
+          <li class="header__item footer__item">
+            <a class="header__item-link header__item-link-first-child footer__link" href="./index.html">HOME</a>
+          </li>
+          <li class="header__item footer__item">
+            <a class="header__item-link footer__link" href="./index.html">PORTFOLIO</a>
+          </li>
+          <li class="header__item footer__item">
+            <a class="header__item-link footer__link" href="./contact-me.html">CONTACT ME</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="footer__button">
+        <a href="" class="footer__link">
+          <img class="footer__link-img" src="./img/git-hub.png" alt="" width="25" height="24" /></a>
+        <a href="" class="footer__link">
+          <img class="footer__link-img" src="./img/twitter.png" alt="" width="24" height="20" /></a>
+        <a href="" class="footer__link">
+          <img class="footer__link-img" src="./img/linkedin.png" alt="" width="24" height="24" /></a>
       </div>
-    </footer>
-  </body>
+    </div>
+  </footer>
+</body>
+
 </html>
